mbedtls: Don't override optimization set by upstream
There's no apparent reason why optimization set by upstream should be
overridden. It also provides a minor speed increase, verified using OpenVPN.

Signed-off-by: Daniel Engberg <daniel.engberg.lists@pyret.net>

--- a/package/libs/mbedtls/Makefile
+++ b/package/libs/mbedtls/Makefile
@@ -64,6 +64,7 @@ endef
 PKG_INSTALL:=1
 
 TARGET_CFLAGS += -ffunction-sections -fdata-sections
+TARGET_CFLAGS := $(filter-out -O%,$(TARGET_CFLAGS))
 
 CMAKE_OPTIONS += \
 	-DCMAKE_BUILD_TYPE:String="Release" \
