--- a/package/network/services/openvpn/Config-mbedtls.in
+++ b/package/network/services/openvpn/Config-mbedtls.in
@@ -67,4 +67,10 @@ config OPENVPN_mbedtls_ENABLE_SMALL
 	  enable smaller executable size (disable OCC, usage
 	  message, and verb 4 parm list)
 
+config OPENVPN_mbedtls_OPTIMIZE_SPEED
+	bool "Optimize for speed over binary size"
+	default n
+	help
+	  Enable O3 and LTO optimization
+
 endif
