--- a/package/network/services/openvpn/Config-nossl.in
+++ b/package/network/services/openvpn/Config-nossl.in
@@ -55,4 +55,10 @@ config OPENVPN_nossl_ENABLE_SMALL
 	  enable smaller executable size (disable OCC, usage
 	  message, and verb 4 parm list)
 
+config OPENVPN_nossl_OPTIMIZE_SPEED
+	bool "Optimize for speed over binary size"
+	default n
+	help
+	  Enable O3 and LTO optimization
+
 endif
