openvpn: Disable lzo and lz4 compression by default
Due to the design of OpenVPN compression slows down performance in almost all real world cases irregardless of arch.

Signed-off-by: Daniel Engberg <daniel.engberg.lists@pyret.net>

--- a/package/network/services/openvpn/Config-nossl.in
+++ b/package/network/services/openvpn/Config-nossl.in
@@ -2,11 +2,11 @@ if PACKAGE_openvpn-nossl
 
 config OPENVPN_nossl_ENABLE_LZO
 	bool "Enable LZO compression support"
-	default y
+	default n
 
 config OPENVPN_nossl_ENABLE_LZ4
 	bool "Enable LZ4 compression support"
-	default y
+	default n
 
 config OPENVPN_nossl_ENABLE_SERVER
 	bool "Enable server support (otherwise only client mode is support)"
