--- a/package/libs/openssl/Config.in
+++ b/package/libs/openssl/Config.in
@@ -22,7 +22,7 @@ config OPENSSL_WITH_DEPRECATED
 
 config OPENSSL_WITH_DTLS
 	bool
-	default n
+	default y
 	prompt "Enable DTLS support"
 
 config OPENSSL_WITH_COMPRESSION
@@ -35,10 +35,70 @@ config OPENSSL_WITH_PSK
 	default y
 	prompt "Enable PSK support"
 
+config OPENSSL_WITH_CMS
+	bool
+	default n
+	prompt "Enable CMS support"
+
 config OPENSSL_WITH_SRP
 	bool
 	default y
 	prompt "Enable SRP support"
+
+config OPENSSL_WITH_IDEA
+	bool
+	default n
+	prompt "Enable IDEA support"
+
+config OPENSSL_WITH_CAMELLIA
+	bool
+	default n
+	prompt "Enable Camellia support"
+
+config OPENSSL_WITH_MDC2
+	bool
+	default n
+	prompt "Enable MDC2 support"
+
+config OPENSSL_WITH_WHIRLPOOL
+	bool
+	default n
+	prompt "Enable Whirlpool support"
+
+config OPENSSL_WITH_SEED
+	bool
+	default n
+	prompt "Enable SEED support"
+
+config OPENSSL_WITH_ARIA
+        bool
+        default n
+        prompt "Enable ARIA support"
+
+config OPENSSL_WITH_SM234
+	bool
+	default n
+	prompt "Enable SM2/3/4 support"
+
+config OPENSSL_WITH_GOST
+	bool
+	default y
+	prompt "Enable GOST engine"
+
+config OPENSSL_WITH_RC2
+	bool
+	default n
+	prompt "Enable RC2 support"
+
+config OPENSSL_WITH_ASYNC
+	bool
+	default n
+	prompt "Enable asynchronous jobs support"
+
+config OPENSSL_WITH_RFC3779
+	bool
+	default n
+	prompt "Enable RFC3779 support (BGP)"
 
 config OPENSSL_OPTIMIZE_SPEED
 	bool
