--- a/package/libs/openssl/Config.in
+++ b/package/libs/openssl/Config.in
@@ -17,8 +17,8 @@ config OPENSSL_WITH_DEPRECATED
 	help
 		Since openssl 1.1.0 is not supported yet, packages requiring this
 		option do not list it as a requirement.
-		Packages requiring this right now:  hostapd, freeswitch, python,
-		python3, squid.
+		Packages requiring this right now:  hostapd, freeswitch-stable, freeswitch,
+		python, python3, squid.
 
 config OPENSSL_WITH_DTLS
 	bool
